--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" id="searchTxt" type="search" placeholder="Search"
+                    aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
@@ -39,34 +40,40 @@
         <h1>Welcome To Magic Notes</h1>
         <div class="card">
 
+
+
             <div class="card-body">
-                <h5 class="card-title">Add a note</h5>
-                <div class="form-group">
+                <div class="mb-3">
+                    <h5 class="card-title">Add title</h5>
+                    <input type="text" class="form-control" id="addtitle" aria-describedby="title title"> placeholder
+                    ="enter "
+                    <div <h5 class="card-title">Add a note</h5>
+                        <div class="form-group">
 
-                    <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                            <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                        </div>
+                        <button class="btn btn-primary" id='addBtn'>Add Note</button>
+                    </div>
                 </div>
-                <button class="btn btn-primary" id='addBtn'>Add Note</button>
+
+                <h1> Your Notes</h1>
+                <hr>
+                <div id="notes" class="row container-fluid">
+                </div>
             </div>
-        </div>
-
-        <h1> Your Notes</h1>
-        <hr>
-        <div id="notes" class="row container-fluid">
-            </div> 
-    </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+            <script src="js/app.js"></script>
 </body>
 
 </html>
